# docs/swagger/swagger.yaml
@@ -8,13 +8,10 @@ definitions:
     properties:
       host:
         type: string
-      layer:
-        type: integer
       pubKey:
         type: string
     required:
     - host
-    - layer
     - pubKey
     type: object
   models.Presence:
@@ -23,13 +20,10 @@ definitions:
         type: string
       lastSeen:
         type: integer
-      layer:
-        type: integer
       pubKey:
         type: string
     required:
     - host
-    - layer
     - pubKey
     - lastSeen
     type: object
@@ -143,6 +137,44 @@ paths:
       summary: Create a node in the PKI
       tags:
       - pki
+  /api/presence/coconodes:
+    post:
+      consumes:
+      - application/json
+      description: Nym mixnodes can ping this method to let the directory server know
+        they're up. We can then use this info to create topologies of the overall
+        Nym network.
+      operationId: notifyMixNode
+      parameters:
+      - description: object
+        in: body
+        name: object
+        required: true
+        schema:
+          $ref: '#/definitions/models.HostInfo'
+          type: object
+      produces:
+      - application/json
+      responses:
+        "201": {}
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.Error'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Error'
+            type: object
+      summary: Lets a node tell the directory server it's alive
+      tags:
+      - presence
   /api/presence/mixnodes:
     get:
       consumes:
